--- a/DockerfileBase
+++ b/DockerfileBase
@@ -2,7 +2,7 @@ FROM golang:buster
 
 RUN echo 'deb http://ftp.debian.org/debian buster-backports main' | tee /etc/apt/sources.list.d/buster-backports.list &&\
 apt-get update &&\
-apt-get install sudo -y wireguard dkms git gnupg ifupdown iproute2 iptables iputils-ping jq libc6 libelf-dev net-tools openresolv systemctl wondershaper &&\
+apt-get install sudo -y wireguard dkms git gnupg ifupdown iproute2 iptables iputils-ping jq libc6 libelf-dev net-tools openresolv systemctl &&\
 \
 mkdir /app &&\
 \
