--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 
 services:
-
   dev_wg_control:
     build: .
-    container_name: dev_wg_control
+    container_name: wg_control
     ports:
     - "51830:51830/udp"
+    - "5000:5000"
     cap_add:
     - NET_ADMIN
     - SYS_MODULE
