--- a/configs/config.json.example
+++ b/configs/config.json.example
@@ -18,7 +18,7 @@
 	},
 
 	"logging":{
-		"folderpath": "/app/logs/",
+		"filepath": "/app/log/logs.txt",
 		"consolelevel": "info",
 		"filelevel": "debug"
 	}
