--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 
 services:
-  dev_wg_control:
+  wireguard_manager:
     build:
       context: ../
       dockerfile: ./deploy/Dockerfile
