--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.2'
 
 services:
   wireguard_manager:
+    image: akacyberrat/wireguard_manager
     build:
       context: ../
       dockerfile: ./deploy/Dockerfile
