--- a/.github/workflows/gofmt.yml
+++ b/.github/workflows/gofmt.yml
@@ -1,10 +1,10 @@
-name: "Golang CI"
+name: "Gofmt Lint"
 
 on: [pull_request]
 
 jobs:
   lint:
-    name: Check
+    name: "Gofmt Lint"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -12,6 +12,6 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20.2'
+          go-version: '1.23'
       - name: Lint Go files
         run: gofmt -e .
